# UTVPI-OA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: converter.py  ex-in.txt  ex1.txt  ex10.txt  ex11.txt  ex12.txt  ex13.txt  ex14.txt  ex2.txt  ex3.txt  ex4.txt  ex5.0.txt  ex5.txt  ex6.txt  ex7.txt  ex8.txt  ex9.txt
include/: utvpi_oa_fm.h
lp-pip/: CMakeLists.txt  input.txt
lp-pip/src/: main.c
src/: main.cpp
